* internal.h (MAYBE_UNUSED): The fallback definition is needed.   Fix compile error with some non-GCC compilers such as   Oracle Solaris Studio 12.3 on Solaris 10.   [Bug #12767] [ruby-dev:49807]

* internal.h (WARN_UNUSED_RESULT): ditto.


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@56172 b2dd03c8-39d4-4d8f-98ff-823fe69b080e